Update: 滞在しているコマの位置を盤面へ可視化させる コマの位置が盤面のどこにあるか可視化する #4

--- a/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
@@ -13,9 +13,22 @@
 }
 
 .item {
+  position: relative;
   display: grid;
   place-items: center;
   width: 12rem;
   height: 3rem;
   background-color: white;
+}
+
+
+.player {
+  position: absolute;
+  inset:0;
+  display: block;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: auto;
+  background-color: rgb(255 0 0 / 50%);
+  border-radius: 50%;
 }
