Add: イベントを8箇所設定し、均等に配置する チェックポイントマスを設ける #16

--- a/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
@@ -19,6 +19,10 @@
   width: 12rem;
   height: 3rem;
   background-color: white;
+
+  &.--event {
+    box-shadow: inset 0 0 0 0.1rem lightseagreen;
+  }
 }
 
 
