--- a/src/components/layout/Layout/components/Navigation/Navigation.module.scss
+++ b/src/components/layout/Layout/components/Navigation/Navigation.module.scss
@@ -7,4 +7,14 @@
   place-content: center;
   height: 3rem;
   margin: auto 0 0;
+  color: white;
+  background-color: rgb(0 0 0 / 80%);
+  backdrop-filter: blur(0.2rem);
+}
+
+.link {
+  display: grid;
+  place-items: center;
+  color: white;
+  text-decoration: none;
 }
