Update: 個別のマス形状を円に変更 すごろく盤のルートを円につなげる #14

--- a/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
@@ -16,9 +16,10 @@
   position: relative;
   display: grid;
   place-items: center;
-  width: 12rem;
+  width: 3rem;
   height: 3rem;
   background-color: white;
+  border-radius: 50%;
   transform: color 250ms ease-in-out, box-shadow 500ms ease-in-out;
 
   // イベントあり
