Update: マスの位置を反転色に変更 すごろく盤のルートを円につなげる #14

--- a/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
@@ -43,6 +43,7 @@
   width: 1.5rem;
   height: 1.5rem;
   margin: auto;
-  background-color: rgb(255 0 0 / 50%);
+  background-color: white;
   border-radius: 50%;
+  mix-blend-mode: difference;
 }
