--- a/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
@@ -5,19 +5,20 @@
 }
 
 .list {
-  display: grid;
-  gap: 0.2rem;
-  place-items: center;
-  padding: 0.5rem;
+  width: 100vmin;
+  height: 100vmin;
+  padding: 1rem;
   background-color: lightgray;
 }
 
 .item {
-  position: relative;
+  position: absolute;
+  inset: 0;
   display: grid;
   place-items: center;
   width: 3rem;
   height: 3rem;
+  margin: auto;
   background-color: white;
   border-radius: 50%;
   transition: color 250ms ease-in-out, box-shadow 500ms ease-in-out;
