Update: ゲーム終了まで、GOALを透過させ、重ねているSTARTのみ可視化 すごろく盤のルートを円につなげる #14

--- a/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Sugoroku/components/ProgressBoard/ProgressBoard.module.scss
@@ -34,6 +34,15 @@
     box-shadow: inset 0 0 0 99rem lightseagreen;
 
   }
+
+  // ゴールするまで、GOALは透過（それまでは同じ位置に重なっているSTARTが可視状態）
+  &:last-child {
+    opacity: 0;
+
+    &:has(.player) {
+      opacity: 1;
+    }
+  }
 }
 
 
