Update: ステップ数のエディットUIを、意味が伝わる程度に整える 全てのチェックポイントを回収するまでコースをループさせる #20

--- a/src/components/pages/Sugoroku/Sugoroku.module.scss
+++ b/src/components/pages/Sugoroku/Sugoroku.module.scss
@@ -1,6 +1,13 @@
 @use "style/_variable" as *;
 
-.sugoroku {
-  //
+.fieldStep {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.fieldStepInput {
+  width: 3rem;
 }
 
