Update: トビラを整える

--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -4,12 +4,29 @@
   position: relative;
 }
 
-.body {
-  padding: 2rem 1rem;
+.header {
+  position: relative;
+  display: grid;
+  place-items: flex-end center;
+  aspect-ratio: 1;
+  padding: 1em;
 }
 
 .title {
+  position: relative;
+  z-index: 1;
+  color: #191f38;
   text-align: center;
+}
+
+.figure {
+  position: absolute;
+  inset: 0;
+  z-index:  0;
+}
+
+.body {
+  padding: 2rem 1rem;
 }
 
 .paragraph {
