--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -12,7 +12,7 @@ html {
     max-width: 430px;
     margin: 0 auto;
     font-size: 18.3467px;
-    background-color: gray;
+    background-color: #191f38;
   }
 }
 
@@ -27,9 +27,10 @@ body {
     Roboto,
     sans-serif;
   font-size: 1rem; // 幅375pxのアートボードで16px相当
+  color: #191f38;
+  background-color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white;
 
   // 背後をスクロールさせない
   &.--isFixedScroll {
