Fix: 枠からのはみ出しを修正

--- a/src/components/pages/Loop/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Loop/components/ProgressBoard/ProgressBoard.module.scss
@@ -5,8 +5,8 @@
 }
 
 .list {
-  width: 100vmin;
-  height: 100vmin;
+  width: 100%;
+  aspect-ratio: 1;
   padding: 1rem;
   background-color: lightgray;
 }
