Update: チェックポイントを通り抜けさせない制御 ゴールを可視化し、ゴール通り抜けも防止 周回させる #22

--- a/src/components/pages/Loop/components/ProgressBoard/ProgressBoard.module.scss
+++ b/src/components/pages/Loop/components/ProgressBoard/ProgressBoard.module.scss
@@ -36,7 +36,7 @@
   }
 
   // ゴールするまで、GOALは透過（それまでは同じ位置に重なっているSTARTが可視状態）
-  &:last-child {
+  &:first-child {
     opacity: 0;
 
     &:has(.player) {
