--- a/src/components/pages/Dice/Dice.module.scss
+++ b/src/components/pages/Dice/Dice.module.scss
@@ -1,6 +1,13 @@
 @use "style/_variable" as *;
 
-.dice {
-  //
+.canvas {
+  position: absolute;
+  inset: 0;
+
+  canvas {
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+  }
 }
 
